--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TeslaValet</string>
+    <string name="preferences_header">Preferences</string>
+    <string name="trunk">Trunk</string>
 </resources>
